--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@tanstack/react-table": "^8.11.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.11",
     "lucide-react": "^0.306.0",
+    "mongodb": "^6.7.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
@@ -25,6 +27,7 @@
     "window-size": "^1.1.1"
   },
   "devDependencies": {
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
