--- a/camera/Pipfile
+++ b/camera/Pipfile
@@ -5,8 +5,8 @@ name = "pypi"
 
 [packages]
 face-recognition = "1.3.0"
-opencv-python = "*"
-requests = "*"
+opencv-python = "4.5.4.58"
+requests = "2.32.3"
 
 [dev-packages]
 
